fix UI on mobile

--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -7,6 +7,18 @@ body {
     font-family: 'Amatic SC', cursive;
 }
 
+body, html {
+    user-select: none; /* Disable text selection */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    
+    touch-action: none; /* Disable touch actions */
+    overflow: hidden; /* Disable scrolling */
+}
+
+
 .overlay {
     opacity: 1;
     background-color: rgb(0, 0, 0);
